Import of BUDNEY/Sub-Deferrable-0.05 from CPAN.
gitpan-cpan-distribution: Sub-Deferrable
gitpan-cpan-version:      0.05
gitpan-cpan-path:         BUDNEY/Sub-Deferrable-0.05.tar.gz
gitpan-cpan-author:       BUDNEY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -17,7 +17,9 @@ name: Sub-Deferrable
 provides:
   Sub::Deferrable:
     file: lib/Sub/Deferrable.pm
-    version: 0.04
+    version: 0.05
+requires:
+  perl: 5.008001
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.04
+version: 0.05
